# oeis-seq

./: .flake8  .pre-commit-config.yaml  LICENSE  pyproject.toml  tox.ini
.cm/: gitstream.cm
.github/workflows/: codeql-analysis.yaml  coverage.yaml  dependency-review.yaml  dev.yaml  gitstream.yml  ossar.yml  pre-commit-auto-update.yaml  publish.yaml  scorecard.yaml
examples/: example1.ipynb
oeis/: __init__.py  abundant.py  arithmetic.py  buttered_croissant.py  carmichael.py  catalan.py  centered_polygonal.py  composite.py  deficient.py  eratosthenes.py  factorial.py  fermat.py  fibonacci.py  hilbert.py  icosahedral.py  jacobsthal.py  juggler.py  kynea.py  lazy_caterer.py  leonardo.py  loeschian.py  lucas.py  mersenne.py  oblong.py  padovan.py  pell.py  perfect.py  period2.py  perrin.py  polite.py  polygonal.py  pyramidal.py  quasiperfect.py  recaman.py  rough.py  semiperfect.py  smooth.py  sorting.py  squarefree.py  superperfect.py  (+7 more)
oeis/registry/: __init__.py
oeis/utils/: __init__.py
tests/: test_oeis.py  test_properties.py
tests/registry/: test_registry.py
tests/utils/: test_abundance.py  test_coprime.py  test_deficiency.py  test_divisors.py  test_perfection.py  test_prime_factors.py  test_prime_properties.py  test_proper_divisors.py  test_semiperfection.py  test_sigma.py
