[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
follow_imports = "silent"
strict_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_column_numbers = true


[tool.poetry]
authors = ["Reid Hochstedler <reidhoch@gmail.com>"]
description = "OEIS Integer sequences implemented in Python"
license = "MIT"
name = "oeis-seq"
packages = [{ include = "oeis" }]
repository = "https://github.com/reidhoch/oeis-seq"
version = "0.1.9"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "22.8.0"
flake8 = "^5.0"
flake8-bugbear = "^22.8"
flake8-commas = "^2.1"
flake8-docstrings = "^1.6"
flake8-import-order = "^0.18"
flake8-pytest-style = "^1.6"
hypothesis = "^6.54"
isort = "^5.10"
matplotlib = "^3.5"
mypy = "^0.971"
pre-commit = "^2.20"
pytest = "^7.1"
pytest-cov = "^3.0"
pytest-profiling = "^1.7"
pytest-xdist = {extras = ["psutil"], version = "^2.5"}
shed = "^0.10"
tox = "^3.25"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
